--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
       </h2>
       <form class="modal__form">
         <label>First Name</label>
-        <input type="text" />
+        <input type="text" placeholder="First Name" />
         <label>Last Name</label>
-        <input type="text" />
+        <input type="text" placeholder="Last Name" />
         <label>Email Address</label>
-        <input type="email" />
-        <button class="btn">Next step &rarr;</button>
+        <input type="email" placeholder="Email" />
+        <button type="submit" class="btn">Next step &rarr;</button>
       </form>
     </div>
     <div class="overlay hidden"></div>
